service.yaml
apiVersion: v1

kind: Service

metadata:

   name: docker-sercie

spec:

   selector:

     app: docker

     type: ClusterIP

   ports:

   - protocol: TCP

     port: 8080
