ingress-docker.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

 annotations:

   cert-manager.io/cluster-issuer: letsencrypt-prod

 name: docker

spec:

   ingressClassName: docker

   rules:

     - host: mohammedsalemabdellahi.color.horizon-workspaces.com

       http:

        paths:

         - backend:

            service:

              name: nginx

              port:

               number: 8080

           path:  /

           pathType:  ImplementationSpecific

   tls:

     - hosts:

         - mohammedsalemabdellahi.horizon-workspaces.com

       secretName: mohammedsalemabdellahi-tls
